--- a/project/htmx_project/sim/templates/example.html
+++ b/project/htmx_project/sim/templates/example.html
@@ -2,19 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- <meta http-equiv="refresh" content="1"> -->
     <title>Simple form</title>
     <script
       src="https://unpkg.com/htmx.org@1.9.4"
       integrity="sha384-zUfuhFKKZCbHTY6aRR46gxiqszMk5tcHjsVFxnUo8VMus4kHGVdIYVbOYYNlKmHV"
       crossorigin="anonymous"
     ></script>
+    
+    
   </head>
   <body>
-    <h1>Please add your most valuable data for us to sell:</h1>
+    <!-- <h1>Please add your most valuable data for us to sell:</h1> -->
 
-    <form hx-post="{% url 'createUser' %}" hx-target="#message">
+    <form hx-post="{% url 'createUser' %}" hx-target="#contacts-table" hx-on::after-request="if(event.detail.successful) this.reset()">
       {% csrf_token %}
-      <input type="text" name="app_name" placeholder="Name" required />
+      <input id="name" type="text" name="app_name" placeholder="Name" required />
       <input type="email" name="app_email" placeholder="Email" required />
       <!-- <input
         type="color"
@@ -22,11 +25,11 @@
         placeholder="Favourite color"
         required
       /> -->
-      <input type="submit" value="Submit" />
+      <input type="submit" value="Submit" hx-boost=true/>
     </form>
-    <div id="message"></div>
-    <table class="table mt-5">
-        <thead>
+    <!-- <div id="message"></div> -->
+    <table class="table mt-5" id="contacts-table">
+      <thead>
  
           <tr>
             <th scope="col">Name</th>
@@ -37,7 +40,7 @@
             <th scope="col">Actions</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
             {% for product in products %}
           <tr>
             <!-- <th scope="row">{{forloop.counter}}</th> -->
@@ -48,8 +51,12 @@
             <!-- <td>
                 <img src="/uploads/4.jpg" style="height: 100px;"> </td> -->
                 <td>
-                    <a href="/delete_demographics/{{product.id }}" class="btn btn-danger m-2">Delete</a>
-                    <a href="/update_demographics/{{product.id }}" class="btn btn-success">Update</a>
+                    
+                    <button class="btn danger" hx-target="#contacts-table" hx-delete="deleteDemographics/{{product.id }}">
+                      Delete
+                    </button>
+                     <a href="{% url 'update_demographics' id=product.id %}" class="nav-link">Edit</a>      
+                    <a href="/update_demographics/{{product.id}}" class="btn btn-success">Update</a>
                 </td>
           </tr>
           {% endfor %}
