--- a/project/htmx_project/sim/templates/update_demographics.html
+++ b/project/htmx_project/sim/templates/update_demographics.html
@@ -17,19 +17,18 @@
   <form hx-post="{% url 'updateUser' %}">
     {% csrf_token %}
 
-    <h>Update Student</h>
     <hr>
-    <div class="form-group">
+    <div hidden="true" class="form-group">
       <label for="exampleInputEmail1">Student id</label>
       <input name="app_id" value="{{products.id}}" type="text" class="form-control" required>
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Student name</label>
+      <label for="exampleInputPassword1">Name</label>
       <input name="app_name" value="{{products.app_name}}" class="form-control"
         required></input>
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Student surname</label>
+      <label for="exampleInputPassword1">Email</label>
       <input name="app_email" value="{{products.app_email}}" class="form-control"
         required></input>
     </div>
